# Cardano-Mixer

./: .gitignore  README.md  cabal.project  cardano-mixer-backend.cabal  cardano-mixer.cabal  full-build.sh  hie.yaml  load-wallet.sh  mixer-client.sh  mixer-client2.sh  start-cardano-wallet.sh  start-chain-index.sh  start-mixer-pab.sh  start-testnet-node.sh
.devcontainer/: devcontainer.json
QAPs/: qap-target
app/: cardmix-relayer.hs  cardmix.hs  mixer-client-psgenerator.hs  mixer-client.hs  mixer-config.hs  mixer-pab-client.hs  mixer-pab.hs  mixer-qap.hs  mixer-zksnark-setup.hs
frontend/: .gitignore  package-lock.json  spago.dhall
frontend/app/: Main.purs
frontend/src/: Utility.purs
frontend/src/Crypto/: BLS12381.purs  Curve.purs  DFT.purs  Extension.purs  Polynomial.purs  Zp.purs
src/: AdminKey.hs  Cardmix.hs  CheckKey.hs  CommandLine.hs  Config.hs  ConnectToPABContract.hs  Crypto.hs  Mixer.hs  MixerApp.hs  MixerContract.hs  MixerContractTypes.hs  MixerFactory.hs  MixerInput.hs  MixerInstance.hs  MixerKeysContract.hs  MixerProofs.hs  MixerRelayerContract.hs  MixerScript.hs  MixerState.hs  MixerStateContract.hs  MixerStateMachine.hs  MixerUserData.hs  PAB.hs  PABContracts.hs  RelayRequest.hs  Relayer.hs  Requests.hs  SigmaProtocol.hs  Utility.hs
src/Configuration/: MixerConfig.hs  PABConfig.hs  RelayerConfig.hs
src/Configuration/Constants/: vestingScriptHash
src/Contracts/: AdminDecision.hs  AdminDecisionContract.hs  ConnectToPABContract.hs  Currency.hs  CurrencyContract.hs  DispenserContract.hs  GovernanceDecisionContract.hs  MixerContract.hs  MixerKeysContract.hs  MixerRelayerContract.hs  MixerStateContract.hs  StateMachine.hs  Vesting.hs  VestingContract.hs
src/Contracts/StateMachine/: MintingPolarity.hs  OnChain.hs  ThreadToken.hs
src/Crypto/: BLS12381.hs  Conversions.hs  Curve.hs  DFT.hs  Extension.hs  MerkleTree.hs  Polynomial.hs  R1CS.hs  ZKSNARK.hs  Zp.hs
src/Scripts/: ADAWithdrawScript.hs  CurrencyScript.hs  DepositVestingScript.hs  FailScript.hs  MixerDepositScript.hs  MixerScript.hs  VestingScript.hs  WithdrawVestingScript.hs
src/Tokens/: AdminDecisionToken.hs  AdminToken.hs  CollateralToken.hs  Common.hs  DepositBeaconToken.hs  DepositToken.hs  GovernanceBeaconToken.hs  GovernanceDecisionToken.hs  InvalidDepositToken.hs  InvalidWithdrawToken.hs  MIXStakingToken.hs  MIXToken.hs  MixerBeaconToken.hs  MixerProfitsBeaconToken.hs  OneShotCurrency.hs  OracleToken.hs  RealDepositToken.hs  RealWithdrawToken.hs  RelayTicketToken.hs  RelayToken.hs  WithdrawBeaconToken.hs  WithdrawToken.hs
src/Types/: Conversions.hs  Mixer.hs  MixerApp.hs  MixerContractTypes.hs  MixerInput.hs  MixerInstance.hs  MixerTransactions.hs
src/Types/MixerApp/: Internal.hs
src/Utils/: Address.hs  BalanceTx.hs  ByteString.hs  ChainIndex.hs  Contracts.hs  Conversions.hs  Tx.hs
testnet/: chain-index-config.json  pab-config.yml  plutus-pab.db  protocol-parameters.json
testnet/Commands/: mixer-client-deposit.sh  mixer-client-withdraw.sh  mixer-client.sh  start-cardano-wallet.sh  start-mixer-pab.sh  start-testnet-node.sh
testnet/Deposits/: DepositSecret0  DepositSecret1  DepositSecret2  DepositSecret3  DepositSecret4  DepositSecret5  ShieldedAccountSecret0  ShieldedAccountSecret1  ShieldedAccountSecret2  ShieldedAccountSecret3  ShieldedAccountSecret4  ShieldedAccountSecret5
testnet/Wallets/: restore-wallet.json  restore-wallet2.json  restore-wallet3.json  restore-wallet4.json
testnet/scripts/: activate-pab.sh  load-wallet.sh  load-wallet2.sh  mixer-client-deposit.sh  mixer-client-submit.sh  mixer-client-withdraw.sh  mixer-pab-activate.sh  node.sh  pab.sh  sign.sh  start-cardano-wallet.sh  start-chain-index.sh  start-mixer-pab.sh  start-testnet-node.sh  wallet.sh
zkSNARKs/: MerkleWithdraw-CRS-reduced.json
