cabal-version:      3.0

name:               cardano-mixer-backend
version:            0.1.0.0

maintainer:         devteam@cardmix.io

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      
      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code       
      -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Cardmix
      CommandLine
      Configuration.MixerConfig
      Configuration.RelayerConfig
      Crypto.Conversions
      Scripts.ADAWithdrawScript
      Scripts.FailScript
      Scripts.MixerDepositScript
      Scripts.MixerScript
      Scripts.VestingScript
      Tokens.DepositToken
      Tokens.GovernanceBeaconToken
      Tokens.GovernanceDecisionToken
      Tokens.MixerBeaconToken
      Tokens.MixerProfitsBeaconToken
      Tokens.MIXToken
      Tokens.OneShotCurrency
      Tokens.WithdrawToken
      Types.Mixer
      Types.MixerApp
      Types.MixerApp.Internal
      Types.MixerInput
      Types.MixerInstance
      Types.MixerTransactions
    build-depends:
      base                          >= 4.9 && < 5,
      base16-bytestring                      -any,
      base64                                 -any,
      aeson                                  -any,
      bytestring                             -any,
      cardano-api                            -any,
      cardano-ledger-alonzo                  -any,
      cardano-ledger-core                    -any,
      cardano-mixer-common                   -any,
      containers                             -any,
      data-default                           -any,
      directory                              -any,
      extra                                  -any,
      file-embed                             -any,
      freer-extras                           -any,
      freer-simple                           -any,
      flat                                   -any,
      lens                                   -any,
      mtl                                    -any,
      openapi3                               -any,
      optparse-applicative                   -any,
      playground-common                      -any,
      plutus-common                          -any,
      plutus-contract                        -any,
      plutus-chain-index                     -any,
      plutus-chain-index-core                -any,
      plutus-tx-plugin                       -any,
      plutus-tx                              -any,
      plutus-ledger                          -any,
      plutus-ledger-api                      -any,
      plutus-ledger-constraints              -any,
      plutus-script-utils                    -any,
      plutus-use-cases                       -any,
      purescript-bridge                      -any,
      random                                 -any,
      req                                    -any,
      serialise                              -any,
      text                                   -any,
      generic-arbitrary                      -any,
      prettyprinter                          -any,
      QuickCheck                             -any,
      uuid                                   -any
    hs-source-dirs: src

executable cardmix
  import: lang
  main-is: cardmix.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
  build-depends:
    aeson                                  -any,
    base                          >= 4.9 && < 5,
    bytestring                             -any,
    cardano-api                            -any,
    cardano-mixer-common                   -any,
    cardano-mixer-backend                  -any,    
    containers                             -any,
    data-default                           -any,
    freer-extras                           -any,
    freer-simple                           -any,
    openapi3                               -any,
    plutus-contract                        -any,
    plutus-ledger                          -any,
    plutus-ledger-api                      -any,
    plutus-ledger-constraints              -any,
    plutus-tx                              -any,
    plutus-use-cases                       -any,
    prettyprinter                          -any,    
    text                                   -any
